--- a/INTEX/Views/Assays/Delete.cshtml
+++ b/INTEX/Views/Assays/Delete.cshtml
@@ -28,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Compensation)
+            @Html.DisplayNameFor(model => model.CompletionEstimate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Compensation)
+            @Html.DisplayFor(model => model.CompletionEstimate)
         </dd>
 
     </dl>
