--- a/INTEX/Views/Assays/Index.cshtml
+++ b/INTEX/Views/Assays/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.AssayProtocol)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Compensation)
+            @Html.DisplayNameFor(model => model.CompletionEstimate)
         </th>
         <th></th>
     </tr>
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.AssayProtocol)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Compensation)
+            @Html.DisplayFor(modelItem => item.CompletionEstimate)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.AssayID }) |
