--- a/INTEX/Views/Assays/Create.cshtml
+++ b/INTEX/Views/Assays/Create.cshtml
@@ -32,10 +32,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Compensation, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CompletionEstimate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Compensation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Compensation, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.CompletionEstimate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CompletionEstimate, "", new { @class = "text-danger" })
             </div>
         </div>
 
