--- a/INTEX/Views/Order_Assay_Test/Create.cshtml
+++ b/INTEX/Views/Order_Assay_Test/Create.cshtml
@@ -11,11 +11,11 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Order_Assay_Test</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+<div class="form-horizontal">
+    <h4>Order_Assay_Test</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @*<div class="form-group">
             @Html.LabelFor(model => model.WorkOrderNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.WorkOrderNumber, new { htmlAttributes = new { @class = "form-control" } })
@@ -71,14 +71,14 @@
                 @Html.EditorFor(model => model.ResultID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ResultID, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Submit Order" class="btn btn-default" />
         </div>
     </div>
+</div>
 }
 
 <div>
